--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,6 +10,9 @@ layout: default
       </div>
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
+      {% if site.show-more-about %}
+      <div class="show-more-about"><a href="/about/">More about me...</a></div>
+      {% endif %}
     </div>
   </header>
   <footer>
