--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -34,6 +34,9 @@ layout: default
 </aside>
 <div class="content-box clearfix">
   {{content}}
+  fds
+  {{ paginator }}
+  asd
   {% include pagination-posts.html %}
 
   {% include pagination.html %}
