--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-
 <aside class="sidebar">
   <header>
     <div class="about">
@@ -33,9 +32,5 @@ layout: default
   </footer>
 </aside>
 <div class="content-box clearfix">
-
-  {% include pagination-posts.html %}
-
-  {% include pagination.html %}
-
+  {{ content }}
 </div>
