--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,14 @@ layout: default
       </div>
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
-      <div class="show-more-about"><a href="/about/">More about me...</a></div>
+      <!-- <div class="sidebar-footer">
+        <div class="sidebar-tag"><a href="/about/" class="tag">About Me</a></div>
+        <div class="sidebar-tag"><a href="/tags/" class="tag">Tags</a></div>
+      </div> -->
+      <div class="page-footer">
+        <div class="page-tag"><a href="/about/" class="tag">About Me</a></div>
+        <div class="page-tag"><a href="/tags/" class="tag">Tags</a></div>
+      </div>
     </div>
   </header>
   <footer>
